kermeta_projects/fr.irisa.triskell.kermeta.io/test/constraintchecker_tests/invalid/027_constraint_type_boolean7.kmt
/* $Id: $
 * Creation date: August 6, 2007
 * License:
 * Copyright:
 * Authors:
 */
@mainClass "root_package::Main"
@mainOperation "main"


package root_package;


require kermeta
class Main
{
	operation main() : Void
	pre lapre is do 5 end
	is do 
		
	end
}